jump bug resolved on narrow window height

--- a/dev/scss/_core.scss
+++ b/dev/scss/_core.scss
@@ -50,9 +50,10 @@ $floorheight: 35px;
 
 .tube--large-green {
   bottom: 35px;
-  width: 300px;
+  left: 504px;
+  width: 37px;
   height: 137px;
-  background-position: 364px 632px;
+  background-position: 186px 632px;
 }
 
 .castle {
@@ -90,7 +91,7 @@ $floorheight: 35px;
 //======//======//======//======
 
 .jump {
-  top: 350px;
+  bottom: 150px;
   background-position-x: 175px;
 }
 
